// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Providers: ConfigProvider: typeConfigs should provide type configs 1`] = `
Array [
  Object {
    "advanced": 1,
    "allows": [Function],
    "component": [Function],
    "description": "Send them a message",
    "form": [Function],
    "name": "Send Message",
    "type": "reply",
  },
  Object {
    "allows": [Function],
    "component": [Function],
    "description": "Add them to a group",
    "form": [Function],
    "name": "Add to Group",
    "type": "add_to_group",
  },
  Object {
    "allows": [Function],
    "component": [Function],
    "description": "Remove them from a group",
    "form": [Function],
    "name": "Remove from Group",
    "type": "remove_from_group",
  },
  Object {
    "aliases": Array [
      "update_contact",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "name": "Update Contact",
    "type": "save_contact_field",
  },
  Object {
    "allows": [Function],
    "component": [Function],
    "description": "Send an email",
    "form": [Function],
    "name": "Send Email",
    "type": "send_email",
  },
  Object {
    "allows": [Function],
    "component": [Function],
    "description": "Save a result for this flow",
    "form": [Function],
    "name": "Save Flow Result",
    "type": "save_flow_result",
  },
  Object {
    "advanced": 1,
    "aliases": Array [
      "webhook",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Call a webook",
    "form": [Function],
    "name": "Call Webhook",
    "type": "call_webhook",
  },
  Object {
    "aliases": Array [
      "subflow",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Run another flow",
    "form": [Function],
    "name": "Run Flow",
    "type": "start_flow",
  },
  Object {
    "advanced": 2,
    "allows": [Function],
    "description": "Split by a custom expression",
    "form": [Function],
    "name": "Split by Expression",
    "type": "expression",
  },
  Object {
    "advanced": 2,
    "allows": [Function],
    "description": "Split by group membership",
    "form": [Function],
    "name": "Split by Group Membership",
    "type": "group",
  },
  Object {
    "advanced": 2,
    "aliases": Array [
      "switch",
    ],
    "allows": [Function],
    "description": "Wait for them to respond",
    "form": [Function],
    "name": "Wait for Response",
    "type": "wait_for_response",
  },
]
`;

exports[`Providers: ConfigProvider: typeConfigs should provide type configs 2`] = `
Array [
  Object {
    "advanced": 1,
    "allows": [Function],
    "component": [Function],
    "description": "Send them a message",
    "form": [Function],
    "name": "Send Message",
    "type": "reply",
  },
  Object {
    "allows": [Function],
    "component": [Function],
    "description": "Add them to a group",
    "form": [Function],
    "name": "Add to Group",
    "type": "add_to_group",
  },
  Object {
    "allows": [Function],
    "component": [Function],
    "description": "Remove them from a group",
    "form": [Function],
    "name": "Remove from Group",
    "type": "remove_from_group",
  },
  Object {
    "aliases": Array [
      "update_contact",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "name": "Update Contact",
    "type": "save_contact_field",
  },
  Object {
    "allows": [Function],
    "component": [Function],
    "description": "Send an email",
    "form": [Function],
    "name": "Send Email",
    "type": "send_email",
  },
  Object {
    "allows": [Function],
    "component": [Function],
    "description": "Save a result for this flow",
    "form": [Function],
    "name": "Save Flow Result",
    "type": "save_flow_result",
  },
  Object {
    "advanced": 2,
    "allows": [Function],
    "description": "Split by group membership",
    "form": [Function],
    "name": "Split by Group Membership",
    "type": "group",
  },
]
`;

exports[`Providers: ConfigProvider: typeConfigs should provide type configs 3`] = `
Object {
  "add_to_group": Object {
    "allows": [Function],
    "component": [Function],
    "description": "Add them to a group",
    "form": [Function],
    "name": "Add to Group",
    "type": "add_to_group",
  },
  "call_webhook": Object {
    "advanced": 1,
    "aliases": Array [
      "webhook",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Call a webook",
    "form": [Function],
    "name": "Call Webhook",
    "type": "call_webhook",
  },
  "expression": Object {
    "advanced": 2,
    "allows": [Function],
    "description": "Split by a custom expression",
    "form": [Function],
    "name": "Split by Expression",
    "type": "expression",
  },
  "group": Object {
    "advanced": 2,
    "allows": [Function],
    "description": "Split by group membership",
    "form": [Function],
    "name": "Split by Group Membership",
    "type": "group",
  },
  "remove_from_group": Object {
    "allows": [Function],
    "component": [Function],
    "description": "Remove them from a group",
    "form": [Function],
    "name": "Remove from Group",
    "type": "remove_from_group",
  },
  "reply": Object {
    "advanced": 1,
    "allows": [Function],
    "component": [Function],
    "description": "Send them a message",
    "form": [Function],
    "name": "Send Message",
    "type": "reply",
  },
  "save_contact_field": Object {
    "aliases": Array [
      "update_contact",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "name": "Update Contact",
    "type": "save_contact_field",
  },
  "save_flow_result": Object {
    "allows": [Function],
    "component": [Function],
    "description": "Save a result for this flow",
    "form": [Function],
    "name": "Save Flow Result",
    "type": "save_flow_result",
  },
  "send_email": Object {
    "allows": [Function],
    "component": [Function],
    "description": "Send an email",
    "form": [Function],
    "name": "Send Email",
    "type": "send_email",
  },
  "start_flow": Object {
    "aliases": Array [
      "subflow",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Run another flow",
    "form": [Function],
    "name": "Run Flow",
    "type": "start_flow",
  },
  "subflow": Object {
    "aliases": Array [
      "subflow",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Run another flow",
    "form": [Function],
    "name": "Run Flow",
    "type": "start_flow",
  },
  "switch": Object {
    "advanced": 2,
    "aliases": Array [
      "switch",
    ],
    "allows": [Function],
    "description": "Wait for them to respond",
    "form": [Function],
    "name": "Wait for Response",
    "type": "wait_for_response",
  },
  "update_contact": Object {
    "aliases": Array [
      "update_contact",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "name": "Update Contact",
    "type": "save_contact_field",
  },
  "wait_for_response": Object {
    "advanced": 2,
    "aliases": Array [
      "switch",
    ],
    "allows": [Function],
    "description": "Wait for them to respond",
    "form": [Function],
    "name": "Wait for Response",
    "type": "wait_for_response",
  },
  "webhook": Object {
    "advanced": 1,
    "aliases": Array [
      "webhook",
    ],
    "allows": [Function],
    "component": [Function],
    "description": "Call a webook",
    "form": [Function],
    "name": "Call Webhook",
    "type": "call_webhook",
  },
}
`;
